fix snimation on mobile

--- a/src/components/mission/WageComparisonSection.scss
+++ b/src/components/mission/WageComparisonSection.scss
@@ -8,6 +8,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    overflow-x: hidden;
 
     .text {
       color: white;
